app/styles/_hero.scss
@import "variables";
@import "mixins";

.hero-container {
  background-image: linear-gradient(-199deg, rgba(212, 146, 4, .98) 4%, #8E0000 92%);
  min-height: 100vh;
  position: relative;
  padding-left: 5px;
}

.site-header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  height: 130px;
  align-items: center;
  &__logos {
    cursor: pointer;
    padding: 15px 0 0 30px;
  }
  &__logo {
    @include XL {
      width: 178px;
      height:61px;
    }
    @include L {
      width: 119px;
      height: 41px;
    }
  }
  &__logo--scrolled {
    display: none;
  }
  &__navs {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    color: #fff;
  }
}


.nav1-list {
  font-weight: 300;
  display: flex;
  align-items: center;
  margin-top: 10px;
  @include M {
    flex-direction: column;
  }
  &__arrow {
    background: url(../images/down-arrow-white.svg);
    background-position: 0;
    background-repeat: no-repeat;
    width: 15px;
    height: 15px;
    margin-right: 30px;
    cursor: pointer;
    transition: 1s;
    &--active {
      transform: rotate(180deg);
      transition: 1s;
    }
  }
  &__item {
    display: inline-block;
    cursor: pointer;
    padding-right: 40px;
    padding-left: 15px;
    border-right: 1px solid #fff;
    transition: all 0.3s ease;
    &:hover {
      border-bottom: 2px solid $orange;
      padding-bottom: 2px;
    }
    &--search {
      @extend .nav1-list__item;
      background: url(../images/magnifying-glass.png);
      background-position: 0;
      background-repeat: no-repeat;
      background-size: 14px;
      padding-left: 30px
    }
    &--flag {
      margin-left: 15px;
      padding-right: 10px;
      cursor: pointer;
    }
  }
}

.nav1-list-contact {
  background-color: $orange;
  padding: 12px 70px 12px 15px;
  display: flex;
  align-items: center;
  cursor: pointer;
  transition: all 0.3s ease;
  &__text {
  }
  &__image {
    padding-left: 10px;
  }
  &:hover {
    box-shadow: inset 0 0 0 25px lighten($orange, 5%);
  }
}

.language {
  overflow: hidden;
  position: relative;
  padding: 5px 10px;
  height: 32px;
  top: 0;
  transition: 1s;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  border-radius: 5px;
  background-image: linear-gradient(to bottom right, #fff, #ccc);
  &--active {
    height: 100px;
    top: 34px;
    transition: 1s;
  }
  &--inactive {

  }
}

.nav2 {

}


.nav2-list {
  &--hidden-on-small-screen {
    padding-right: 70px;
    padding-top: 26px;
    letter-spacing: .5px;
    display: flex;
    @include XL {

    }
    @include L {
      padding-right: 50px;
    }
    @include M {
      display: none;
    }
  }
  &--visible-on-small-screen {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: fixed;
    background-color: $orange;
    opacity: .8;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: hidden;
    padding-top: 30px;
    z-index:6;
  }
  &__item {
    cursor: pointer;
    display: flex;
    align-items: center;
    text-transform: uppercase;
    text-align: center;
    font-size: 16px;
    padding: 5px;
    margin-left: 16px;
    transition: all 0.3s ease;
    @include XL {
      font-size: 15px;
    }
    @include L {
      font-size: 14px;
    }
    @include M {
      font-size: 36px;
      margin: 0 3px 10px 3px;
      padding: 15px 5px;
    }
    @include S {
      font-size: 28px;
    }
    @include XS {
      font-size: 24px;
      margin: 0 3px 8px 3px;
      padding: 10px 3px;
    }
    &:hover {
      background-color: #FFFFFF;
      color: $orange;
    }
  }
}

.nav2-icon {
  position: absolute;
  width: 35px;
  height: 40px;
  opacity: 0.8;
  right: 8px;
  top: 10px;
  z-index: 7;
  display: none;
  cursor: pointer;
  @include M {
    display: block;
  }
  &:hover {
    opacity: 0.6;
  }
  &--active {
    .nav2-icon__line--first {
      transform: rotate(45deg) scaleX(1.13);
    }
    .nav2-icon__line--second {
      opacity: 0;
    }
    .nav2-icon__line--third {
      transform: rotate(-45deg) scaleX(1.13);
    }
  }
  &__line {
    height: 4px;
    display: block;
    margin-bottom: 9px;
    background-color: #fff;
    transition: 0.7s ease-out;
    &--first {
      @extend .nav2-icon__line;
      transform-origin: top left;
    }
    &--second {
      @extend .nav2-icon__line;
    }
    &--third {
      @extend .nav2-icon__line;
      transform-origin: bottom left;
    }
  }
}



.hero {
  max-width: 1566px;
  margin: auto;
  &__heading {
    max-width: 1100px;
    padding-top: 100px;
    padding-bottom: 68px;
    font-weight: 800;
    font-size: 80px;
    color: #FFF;
    letter-spacing: .5px;
    line-height: 80px;
    text-transform: uppercase;
    @include XL {
      font-size: 60px;
      line-height: 60px;
    }
    @include L {
      font-size: 40px;
      line-height: 40px;
      padding-bottom: 40px;
    }
    @include M {
      font-size: 30px;
      line-height: 30px;
    }
    @include S {
      font-size: 26px;
      line-height: 26px;
    }
  }
  &__subheading {
    max-width: 791px;
    padding-bottom: 54px;
    font-weight: 400;
    font-size: 22px;
    color: #FFF;
    line-height: 32px;
    @include L {
      font-size: 20px;
      line-height: 20px;
    }
    @include M {
      font-size: 18px;
      line-height: 18px;
    }
    @include S {
      font-size: 16px;
      line-height: 16px;
    }
  }
  &__link {
    cursor: pointer;
    text-decoration: none;
    display: inline-block;
    padding: 4px;
    font-size: 24px;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: #fff;
    font-weight: 700;
    border-bottom: 3px solid #fff;
    transition: all 0.3s ease;
    @include L {
      font-size: 20px;
    }
    @include M {
      font-size: 16px;
    }
    &:hover {
      background: #fff;
      color: $orange;
    }
  }
}

.triangle-button {
  display: inline-block;
  width: 20vw;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  text-align: center;
  margin: 0 auto;
  &__image {
    opacity: 0.8;
    &:hover {
      opacity: 1;
      transform: scale(1.4);
      transition-duration: 0.3s;
    }
  }
}

